# knowledge-service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: chunking.py  config.py  embeddings.py  generation.py  main.py  models.py  security.py  service.py  tenants.py  vector_store.py
app/extractors/: file_extractor.py  web_extractor.py
app/static/: admin.js  style.css
app/templates/: index.html
scripts/: check_ollama_from_container.sh  tenant_url_query_demo.sh
